allow to set permgen size for tests
git-svn-id: https://svn.codehaus.org/geoserver/trunk@16303 ef1d6e69-97e5-0310-af46-8a06194da32a